fixed the scrollbar issue

--- a/_includes/css/grayscale.css
+++ b/_includes/css/grayscale.css
@@ -387,3 +387,7 @@ body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
     overflow-x: hidden !important;
 }
+
+::-webkit-scrollbar { 
+    display: none; 
+}
